pamc/src/tests/sample_code/should_fail/type_check/labeledness_mismatch/unlabeled_variant_labeled_args.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let O = Nat.O;

let right = Nat.S(O);
let wrong = Nat.S(pred: O);
